# policyengine-us

./: .buildinfo  .coverage.baseline  .coveragerc  .ct-tanf-experiment  .gitignore  .gitmodules  .implementation_az_2025_income_tax.md  .implementation_co_2025_income_tax.md  .implementation_fl_tanf.md  .implementation_ia_tanf.md  .implementation_in_tanf.md  .implementation_ks_2025_income_tax.md  .implementation_mi_tanf.md  .implementation_mo_tanf.md  .implementation_oh_2025_tax.md  .implementation_oh_tanf.md  .implementation_ok_2025_tax.md  .implementation_pa_tanf.md  .implementation_tn_tanf.md  .implementation_wa_tanf.md  .implementation_wi_tanf.md  .pre-commit-config.yaml  .tx_liheap_implementation.md  0.1.7  =0.1.7  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dependent_Exemption_Reform.ipynb  HOW_TO_ADD_UPRATING_EXCLUSIONS.md  INDIANA_TANF_IMPLEMENTATION.md  LSR_STATUS.md  MANIFEST.in  MEMORY_FIX_SUMMARY.md  Makefile  PSL_catalog.json  README.md  SEP_MSG.tmp  UPRATING_DETECTION.md  (+117 more)
...working_files/: SNAP.yml  SNAP_income_deductions.yaml  income_limit.yaml  shelter_deduction.yaml
.circleci/: config.yml
.claude/: claude_code_hook.sh  settings.json  settings.local.json  startup.sh
.claude/agents/: README.md  ci-fixer.md  code-reviewer.md  cross-program-validator.md  document_collector.md  documentation-enricher.md  edge-case-generator.md  implementation-validator.md  integration-agent.md  isolation-setup.md  issue-manager.md  legislation-statute-analyzer.md  naming-coordinator.md  notebook-issue-creator.md  parameter-architect.md  performance-optimizer.md  policy-domain-validator.md  policyengine-reviewer.md  policyengine-standards.md  pr-pusher.md  reference-validator.md  replication-verifier.md  reviewer.md  rules-engineer.md  rules-reviewer.md  rules_engineer.md  supervisor.md  test-creator.md  test_creator.md  verifier.md  workflow.md
.claude/commands/: encode-policy.md  fetch-pdf.md  fix-pr.md  review-pr.md
.claude/docs/: agent-coordination.md  agent-testing.md  isolation-enforcement.md  workflow.md
.claude/skills/: structural-reform-creator.md
.claude/tests/: example_federal_state.py  example_hardcoding.py
.github/: PULL_REQUEST_TEMPLATE.md  bump_version.py  compare_speed.py  get-changelog-diff.sh  has-functional-changes.sh  is-version-number-acceptable.sh  publish-git-tag.sh  update_api.py
.github/workflows/: check_jupyterbook.yml  deploy_jupyterbook.yml  partner-api-impact-notice.yaml  policy_tests.yml  pr.yaml  pr.yml  push.yaml  push.yml  rebuild-model-site.yml  test-and-coverage.yml  test-memory-debug.yml  test-memory-optimized.yml  test-optimized.yml  test.yaml  test_and_coverage.yaml  weekly-uv-lock.yaml
_sources/programs/: wic.ipynb
cbo_data/: 51135-2026-02-Economic-Projections.xlsx  51138-2026-02-Revenue-Projections.xlsx  51312-2026-02-snap.xlsx  51313-2026-02-ssi.xlsx  51316-2026-02-unemployment.xlsx  parse_cbo_2026.py
changelog.d/: 529-batch-1a.added.md  529-batch-2.added.md  529-batch-3.added.md  5798.fixed.md  5907.fixed.md  5984.added.md  6174.fixed.md  6864.fixed.md  7800.fixed.md  7837.fixed.md  7897-taxsim-compat-layer.added.md  7994.fixed.md  8009.added.md  8011.added.md  8095.fixed.md  8096.fixed.md  8101.fixed.md  8102.fixed.md  8145.added.md  8168.added.md  8186.fixed.md  8189.fixed.md  8190.fixed.md  8199.added.md  8243.fixed.md  8255.fixed.md  8257.changed.md  8268.fixed.md  8299.fixed.md  8304.added.md  8307.added.md  8308.added.md  8309.added.md  8310.added.md  8311.added.md  8312.added.md  8313.added.md  8315.added.md  8317.added.md  8337.fixed.md  (+428 more)
changelog.d/added/: 7548.md  7946.md  8188.md  8194.md  8271.md  8294.md  8349.md  8351.md  8355.md  8397.md  8441.md  8442.md  ci-validation-demo.md  issue-8267-medicaid-ce-pass-through.md  nj-pas1-property-tax-relief-income.md  ri-current-law-ctc-surtax.md  ssa-disability-screen.md
changelog.d/changed/: 8211.md
changelog.d/fixed/: 1030.md  1272.md  6035.md  6975.md  7321.md  7391.md  7492.md  7920.md  (+31 more)
docs/: LATEX_SETUP.md  PARAMETER_LABEL_METADATA_IMPROVEMENTS.md  README.md  _config.yml  _toc.yml  environment.yml  index.ipynb  index.md  myst.yml  program_menu.md
docs-quarto/: .gitignore  README.md  _quarto.yml  index.qmd  references.bib
examples/: income-sources.html
lessons/: agent-lessons.md
openfisca_country_template/: __init__.py  entities.py
openfisca_us/: __init__.py  changelog_entry.yaml  entities.py  ma_part_b_agi.py  model_api.py  system.py  typing.py
policyengine_us/: __init__.py  build_metadata.py  changelog_entry.yaml  conftest.py  entities.py  model_api.py  modelled_policies.yaml  programs.yaml  system.py  typing.py
programs/: school_meals.html  snap.html  wic.html
scripts/: add_labels_to_parameters.py  analyze_test_chunks.py  batch_test_runner.py  find_slow_tests.py  fix_yaml_tabs.py  measure_test_speed.py  profile_test_memory.py  quick_test_analysis.py  test_baseline_batched.py  test_baseline_isolated.py  test_baseline_phased.py  test_baseline_states_together.py  test_contrib_batched.py  test_contrib_isolated.py
sources/: ar_2025_implementation_plan.md  ar_2025_working_references.md  implementation_mn_tanf.md  ks_tanf_implementation_notes.md  mn_tanf_working_references.md  ny-ui-impl-spec.md  ny-ui-requirements-checklist.md  ny-ui-research-summary.md  ny-ui-scope-summary.md  working_references.md
ssi/: ssi_reported.py
taxsim_comparison/: README.md  final_nh_comparison_report.py  nh_test_cases.csv  nh_test_simple.csv  simple_nh_comparison.py  taxsim_results.csv
test_crfb/: test_85_reform.yaml
usage/: speed.html
validation/: taxsim.html
(+32910 files in other folders)
