[project]
name = "policyengine-us"
version = "1.586.2"
description = "Add your description here."
readme = "README.md"
authors = [
    { name = "PolicyEngine", email = "hello@policyengine.org" }
]
requires-python = ">=3.11,<3.15"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "microdf-python>=1.0.0",
    "pandas>=2.0",
    "policyengine-core>=3.23.5",
    "tqdm>=4.67.1",
]

[project.scripts]
policyengine-us = "policyengine_us:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "black==26.1.0",
    "coverage>=7.9.2",
    "furo>=2024.8.6",
    "jupyter-book>=1.0.4.post1",
    "setuptools>=80.9.0",
    "build>=1.2.2.post1",
    "towncrier>=24.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["policyengine_us"]

[tool.towncrier]
package = "policyengine_us"
directory = "changelog.d"
filename = "CHANGELOG.md"
title_format = "## [{version}] - {project_date}"
issue_format = ""
underlines = ["", "", ""]

[[tool.towncrier.type]]
directory = "breaking"
name = "Breaking changes"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

